# vr-firmware-update

./: CMakeLists.txt  README.md  vr-config-info
config/: chalupa-vr.json  congo-vr.json  galena-vr.json  morocco-vr.json  onyx-vr.json  purico-vr.json  quartz-vr.json  recluse-vr.json  sh5-vr.json  shale-vr.json  sunstone-vr.json  titanite-vr.json  volcano-vr.json  vr-config-info
inc/: vr_update.hpp  vr_update_infineon_tda.hpp  vr_update_infineon_xdpe.hpp  vr_update_mps.hpp  vr_update_mps285x.hpp  vr_update_renesas_gen2.hpp  vr_update_renesas_gen3.hpp  vr_update_renesas_patch.hpp  vr_update_xdpe_patch.hpp
src/: main.cpp  tags  vr_update.cpp  vr_update_infineon_tda.cpp  vr_update_infineon_xdpe.cpp  vr_update_mps.cpp  vr_update_mps285x.cpp  vr_update_renesas_gen2.cpp  vr_update_renesas_gen3.cpp  vr_update_renesas_patch.cpp  vr_update_xdpe_patch.cpp
